--- a/pom.xml
+++ b/pom.xml
@@ -453,11 +453,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-					<scmCommentPrefix></scmCommentPrefix>
-					<tagNameFormat>aa-parent-@{project.version}</tagNameFormat>
-				</configuration>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>perform</goal>
+						</goals>
+						<configuration>
+							<pomFileName>
+								aa-parent/pom.xml
+							</pomFileName>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<pluginManagement>
