--- a/aa-common/pom.xml
+++ b/aa-common/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<artifactId>aa-parent</artifactId>
 		<groupId>cn.iaa</groupId>
-		<version>0.2.2</version>
+		<version>0.2.3-SNAPSHOT</version>
 	</parent>
 
 	<name>aa-common</name>
