--- a/aa-util/pom.xml
+++ b/aa-util/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>cn.iaa</groupId>
 		<artifactId>aa-parent</artifactId>
-		<version>0.2.2</version>
+		<version>0.2.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>aa-util</artifactId>
 
