--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>aa-common</module>
 		<module>aa-util</module>
 		<module>aa-redis</module>
+		<module>aa-core</module>
 	</modules>
 
 	<properties>
@@ -76,6 +77,21 @@
 			<dependency>
 				<groupId>cn.iaa</groupId>
 				<artifactId>aa-common</artifactId>
+				<version>0.2.3-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.iaa</groupId>
+				<artifactId>aa-util</artifactId>
+				<version>0.2.3-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.iaa</groupId>
+				<artifactId>aa-core</artifactId>
+				<version>0.2.3-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.iaa</groupId>
+				<artifactId>aa-redis</artifactId>
 				<version>0.2.3-SNAPSHOT</version>
 			</dependency>
 			<dependency>
