--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<url>http://iaa.cn</url>
 
 	<modules>
-		<module>aa-common</module>
+		<module>aa-util</module>
 		<module>aa-extra</module>
 		<module>aa-redis</module>
 		<module>aa-core</module>
@@ -76,7 +76,7 @@
 			</dependency>
 			<dependency>
 				<groupId>cn.iaa</groupId>
-				<artifactId>aa-common</artifactId>
+				<artifactId>aa-util</artifactId>
 				<version>0.2.3-SNAPSHOT</version>
 			</dependency>
 			<dependency>
