--- a/aa-extra/pom.xml
+++ b/aa-extra/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>cn.iaa</groupId>
 		<artifactId>aa-parent</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>aa-extra</artifactId>
 
