--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>cn.iaa</groupId>
 	<artifactId>aa-parent</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>aa-parent</name>
@@ -76,22 +76,22 @@
 			<dependency>
 				<groupId>cn.iaa</groupId>
 				<artifactId>aa-util</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cn.iaa</groupId>
 				<artifactId>aa-extra</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cn.iaa</groupId>
 				<artifactId>aa-core</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>cn.iaa</groupId>
 				<artifactId>aa-redis</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>antlr</groupId>
