Change DesCode Implement.

--- a/aa-core/pom.xml
+++ b/aa-core/pom.xml
@@ -35,5 +35,9 @@
 			<artifactId>json-lib</artifactId>
 			<classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 	</dependencies>
 </project>
