--- a/aa-redis/pom.xml
+++ b/aa-redis/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>cn.iaa</groupId>
 		<artifactId>aa-parent</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 
 	<artifactId>aa-redis</artifactId>
