--- a/aa-util/pom.xml
+++ b/aa-util/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<artifactId>aa-parent</artifactId>
 		<groupId>cn.iaa</groupId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 
 	<name>aa-util</name>
