--- a/aa-core/pom.xml
+++ b/aa-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>cn.iaa</groupId>
 		<artifactId>aa-parent</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.3</version>
 	</parent>
 
 	<artifactId>aa-core</artifactId>
